Fix zooming on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-width: 500px;
-  transform: scale(0.8);
-  transform-origin: top left;
 }
 
 code {
